--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,9 @@ ul a:hover {
 /* SHOPS */
 
 .Shops nav {
-  padding: 0 20px;
-  margin: 10px 10px 0 10px;
-  padding-top: 10px;
+  padding: 10px 20px;
+  flex: 0 0 265px;
+  margin: 0 15px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
@@ -127,18 +127,114 @@ ul a:hover {
 .Shop .product button {
   box-sizing: border-box;
   font-size: 16px;
-  background-color: white;
   padding: 10px;
   border: 0;
   font-weight: bold;
-
+  color: white;
   border-radius: 10px;
-  transition: background-color 0.5s, box-shadow 0.5s, transform 0.5s;
+  transition: box-shadow 0.5s, transform 0.5s;
 }
 
 .Shops .product button:hover {
-  background-color: #f6f7f9;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transform: scale(1.1);
+}
+
+/* SHOPPING CART */
+
+.Cart {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 15px;
+}
+
+.Cart .container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  display: flex;
+  gap: 50px;
+}
+
+/* 
+height: 400px;
+padding: 50px;
+box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
+border-radius: 10px;
+*/
+
+.Cart .container form label {
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.Cart .container form {
+  display: flex;
+  box-sizing: border-box;
+  width: 400px;
+  height: 400px;
+  justify-content: center;
+  padding: 0 50px;
+
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+
+  background-color: white;
+  flex-direction: column;
+}
+
+.Cart .container .cart {
+  box-sizing: border-box;
+  width: 400px;
+  height: 400px;
+  padding: 25px 50px;
+  background-color: white;
+  min-width: 285px;
+
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+
+  overflow-y: auto;
+}
+
+.Cart input[type='submit'] {
+  background-color: #92b780;
+  border: 0;
+  border-radius: 10px;
+  width: 140px;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+  padding: 10px;
+  transition: box-shadow 0.5s, transform 0.5s;
+}
+
+.Cart input[type='submit']:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ccc;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
+
+.cart-item .cart-item-title {
+  font-weight: bold;
 }
