--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -263,6 +263,56 @@ ul a:hover {
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
 }
 
+/* POPUP */
+
+.popup {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.25);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-content {
+  background-color: white;
+  width: 300px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  border-radius: 10px;
+
+  box-sizing: border-box;
+  padding: 30px;
+}
+
+.popup-content button {
+  background-color: rgb(224, 71, 76);
+  border: 0;
+  border-radius: 10px;
+  width: 140px;
+  font-weight: bold;
+  font-size: 18px;
+  color: white;
+  padding: 10px;
+  transition: box-shadow 0.5s, transform 0.5s;
+}
+
+.popup-content button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
